<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_auth">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.unsplash.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_CollectionsFragment"
            app:destination="@+id/navigation_collections" />
        <action
            android:id="@+id/action_HomeFragment_to_ProfileFragment"
            app:destination="@+id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.unsplash.ui.fragments.DetailsPhotoFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details_photo">
        <argument
            android:name="id"
            app:argType="string"
            android:defaultValue="" />
        <deepLink app:uri="https://unsplash.com/photos/{id}" />
    </fragment>
    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.example.unsplash.ui.fragments.CollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections">
        <action
            android:id="@+id/action_CollectionsFragment_to_HomeFragment"
            app:destination="@+id/navigation_home" />
        <action
            android:id="@+id/action_CollectionsFragment_to_ProfileFragment"
            app:destination="@+id/navigation_profile" />
        <action
            android:id="@+id/action_CollectionsFragment_to_CollectionPhotosFragment"
            app:destination="@+id/collectionPhotosFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.unsplash.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_ProfileFragment_to_HomeFragment"
            app:destination="@+id/navigation_home" />
        <action
            android:id="@+id/action_ProfileFragment_to_CollectionsFragment"
            app:destination="@+id/navigation_collections" />
    </fragment>
    <fragment
        android:id="@+id/navigation_onboarding"
        android:name="com.example.unsplash.ui.fragments.onboarding.OnBoardingFr"
        android:label="@string/welcome"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_onboarding_to_navigation_auth"
            app:destination="@id/navigation_auth" />
    </fragment>
    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.example.unsplash.ui.fragments.AuthFragment"
        android:label="AuthFragment"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/collectionPhotosFragment"
        android:name="com.example.unsplash.ui.fragments.CollectionPhotosFragment"
        android:label="@string/title_photos_in_collection"
        tools:layout="@layout/fragment_collections"/>
</navigation>