<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    tools:context=".ui.fragments.HomeFragment">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo" />

    <ImageView
        android:id="@+id/loading_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/error_image"
        android:contentDescription="@string/error_text"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_image"
        android:layout_centerHorizontal="true"
        android:text="@string/error_text"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:background="@color/backgroundAlpha">

        <androidx.cardview.widget.CardView
            android:id="@+id/avatarCV"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/avatar" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingStart="8dp"
            android:paddingEnd="6dp"
            app:layout_constraintBottom_toTopOf="@id/nickname"
            app:layout_constraintEnd_toStartOf="@+id/likesCountTextView"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toEndOf="@id/avatarCV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="6dp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/avatarCV"
            app:layout_constraintEnd_toStartOf="@+id/likesCountTextView"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toEndOf="@id/avatarCV"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <ImageButton
            android:id="@+id/likeImageView"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_unlike"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/likesCountTextView"
            android:contentDescription="@string/like" />

        <TextView
            android:id="@+id/likesCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/likeImageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
