<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/nickname"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrier"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/description_icon_location"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/description_icon_location"
            app:autoSizeTextType="none"
            app:layout_constraintStart_toEndOf="@+id/icon_location"
            app:layout_constraintTop_toBottomOf="@+id/bio" />

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/description_icon_email"
            android:src="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_location" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/description_icon_location"
            app:layout_constraintStart_toEndOf="@+id/ic_email"
            app:layout_constraintTop_toBottomOf="@+id/text_location" />

        <ImageView
            android:id="@+id/ic_download"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/download_icon"
            android:src="@drawable/ic_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_email" />

        <TextView
            android:id="@+id/text_downloads"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/ic_download"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />

        <TextView
            android:id="@+id/text_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/you_liked"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_download" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_favorite"
            tools:listitem="@layout/item_collection" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>